vpc_route_tables.tf
# route tables
resource "aws_route_table" "rt_public" {
  count  = local.create_network_resources
  vpc_id = aws_vpc.main[0].id

  tags = local.rt_public_tags
}

resource "aws_route_table" "rt_private" {
  count  = local.create_network_resources
  vpc_id = aws_vpc.main[0].id

  tags = local.rt_private_tags
}

# route table associations
resource "aws_route_table_association" "rt_public_a" {
  count          = (length(aws_route_table.rt_public) > 0) ? length(aws_subnet.sn_public_a) : 0
  subnet_id      = aws_subnet.sn_public_a[count.index].id
  route_table_id = aws_route_table.rt_public[0].id
}

resource "aws_route_table_association" "rt_public_b" {
  count          = (length(aws_route_table.rt_public) > 0) ? length(aws_subnet.sn_public_b) : 0
  subnet_id      = aws_subnet.sn_public_b[count.index].id
  route_table_id = aws_route_table.rt_public[0].id
}

resource "aws_route_table_association" "rt_public_c" {
  count          = (length(aws_route_table.rt_public) > 0) ? length(aws_subnet.sn_public_c) : 0
  subnet_id      = aws_subnet.sn_public_c[count.index].id
  route_table_id = aws_route_table.rt_public[0].id
}

resource "aws_route_table_association" "rt_private_a" {
  count          = local.multiaz_a_required ? 0 : (length(aws_route_table.rt_private) > 0 ? length(aws_subnet.sn_private_a) : 0)
  subnet_id      = aws_subnet.sn_private_a[count.index].id
  route_table_id = aws_route_table.rt_private[0].id
}

resource "aws_route_table_association" "rt_private_b" {
  count          = local.multiaz_b_required ? 0 : (length(aws_route_table.rt_private) > 0 ? length(aws_subnet.sn_private_b) : 0)
  subnet_id      = aws_subnet.sn_private_b[count.index].id
  route_table_id = aws_route_table.rt_private[0].id
}

resource "aws_route_table_association" "rt_private_c" {
  count          = local.multiaz_c_required ? 0 : (length(aws_route_table.rt_private) > 0 ? length(aws_subnet.sn_private_c) : 0)
  subnet_id      = aws_subnet.sn_private_c[count.index].id
  route_table_id = aws_route_table.rt_private[0].id
}

## VPC Endpoint

resource "aws_vpc_endpoint_route_table_association" "s3_public_rt" {
  count           = local.create_vpcep_s3
  vpc_endpoint_id = aws_vpc_endpoint.s3[0].id
  route_table_id  = element(aws_route_table.rt_public.*.id, count.index)

}

resource "aws_vpc_endpoint_route_table_association" "s3_private_rt" {
  count           = local.create_vpcep_s3
  vpc_endpoint_id = aws_vpc_endpoint.s3[0].id
  route_table_id  = element(aws_route_table.rt_private.*.id, count.index)

}

resource "aws_vpc_endpoint_route_table_association" "dynamodb_public_rt" {
  count           = local.create_vpcep_dynamodb
  vpc_endpoint_id = aws_vpc_endpoint.dynamodb[0].id
  route_table_id  = element(aws_route_table.rt_public.*.id, count.index)

}

resource "aws_vpc_endpoint_route_table_association" "dynamodb_private_rt" {
  count           = local.create_vpcep_dynamodb
  vpc_endpoint_id = aws_vpc_endpoint.dynamodb[0].id
  route_table_id  = element(aws_route_table.rt_private.*.id, count.index)

}

# routes
resource "aws_route" "rt_public_default" {
  count                  = local.create_igw
  route_table_id         = aws_route_table.rt_public[0].id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw[count.index].id

  depends_on = [aws_internet_gateway.igw]
}

resource "aws_route" "rt_private_default" {
  count                  = local.create_nat
  route_table_id         = aws_route_table.rt_private[0].id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.natgw.0.id
}

# transit gateway
resource "aws_route" "rt_private_transit_gateway" {
  count                  = local.create_private_tgw_routes
  route_table_id         = aws_route_table.rt_private[0].id
  destination_cidr_block = element(var.tgw_destination_cidr_blocks, count.index)
  transit_gateway_id     = aws_ec2_transit_gateway_vpc_attachment.network_transit_gateway[0].transit_gateway_id

  depends_on = [
    aws_ec2_transit_gateway_vpc_attachment.network_transit_gateway,
  ]
}
